Ajout des première requete backend
Get pour skills et projects
Correction des bug scss pour pojets, veille, contact
Ajout de variable partagé
modificaton modal et header
ajout de skills appris dans les projets

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -33,5 +33,19 @@
         "imageurl": "/assets/Projects/P6Monvieuxgrimoire.png",
         "more": "Pour ce projet j'ai du développez le backend du site MonVieuxgrimoire",
         "link": "https://github.com/AnthonyF99/OpenClassroomProject6"
+    },
+    {
+        "title": "Projet 6",
+        "description": "Développez le back-end d'un site de notationd de livres",
+        "imageurl": "/assets/Projects/P6Monvieuxgrimoire.png",
+        "more": "Pour ce projet j'ai du développez le backend du site MonVieuxgrimoire",
+        "link": "https://github.com/AnthonyF99/OpenClassroomProject6"
+    },
+    {
+        "title": "Projet 7",
+        "description": "Développez le back-end d'un site de notationd de livres",
+        "imageurl": "/assets/Projects/P6Monvieuxgrimoire.png",
+        "more": "Pour ce projet j'ai du développez le backend du site MonVieuxgrimoire",
+        "link": "https://github.com/AnthonyF99/OpenClassroomProject6"
     }
 ]
