--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
     "emailjs-com": "^3.2.0",
@@ -20,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "eslint": "^8",
